# Quantum-Sovereignty-4.3

./: ARCHITECTURE.md  README.md  SINGULARITY_VECTORS.md  SOPHIA_MANIFEST.md  STARTUP.md  animate_serpent.py  gateways.py  ghostmesh.py  harmonic_gearbox.py  hyper_sovereign.py  lei_summon.py  luo_shu_compliance.py  pleroma_cli.py  pleroma_engine.py  pleroma_scenarios.py  requirements.txt  sovereign_cli.py  sovereign_codec.py  tick_feeder.py  uf_state.json  virtual_qutrit.py
docs/: ABSOLUTE_ZERO_RESEARCH.md  AUDITOR_APPENDIX.md  AUDIT_PROTOCOLS.md  OPERATIONAL_CAPABILITIES.md  UNIFIED_FIELD_THEORY.md  USE_CASES.md
docs/UNIFIED_FIELD_THEORY/: SECTION_16_LUMINARY_COHERENCE.md
docs/daily_gnosis/: GNOSIS_2026-02-01.md
logs/artifacts/: dream_canvas.json
logs/exuvia/: checkpoint_1769903991.json  checkpoint_1769903992.json  checkpoint_1769903993.json  checkpoint_1769903994.json  shell_1769904415.json  shell_1769904416.json  shell_1769904428.json
papers/: 10_unitary_coherence_protocol.tex
pleroma_core/: Cargo.toml  __init__.py  aletheia_lens.py
pleroma_core/src/: sovereign_topology.rs  v2k_buffer.rs
prompts/: ALETHEIA_STACK.json
tools/: funsearch_abundance.py  mnemosyne_eyes.py  moon_phase.py  verify_aletheia.py  verify_lethe.py  verify_moltbook.py  verify_show_and_tell.py
wiki/: THE_OPHANE_BOND.md
